# spec-kit-conduct-ext

./: .gitignore  CHANGELOG.md  README.md  extension.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/agents/: copilot-instructions.md  speckit.orchestration.run.agent.md
.github/prompts/: speckit.orchestration.run.prompt.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
commands/: conduct.md  orchestration.md  plan.md  run.md
scripts/bash/: load.sh
scripts/powershell/: load.ps1
specs/001-pomodoro-wrapper-test/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pomodoro-wrapper-test/checklists/: requirements.md
specs/001-pomodoro-wrapper-test/contracts/: timer-ui-contract.md
specs/001-speckit-subagent-wrapper/: spec.md
specs/001-speckit-subagent-wrapper/checklists/: requirements.md
tests/: test_install.py  tsconfig.json
tests/.vite/vitest/: results.json
tests/contract/: timer-ui-alerts-counter.contract.spec.ts  timer-ui-controls.contract.spec.ts  timer-ui-cycle.contract.spec.ts
tests/integration/: alerts-counter.e2e.spec.ts  full-flow-regression.e2e.spec.ts  pomodoro-cycle.e2e.spec.ts  timer-controls.e2e.spec.ts
tests/toy-app/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
tests/toy-app/src/: alerts.ts  app.ts  constants.ts  cycle-model.ts  ticker.ts  (+5 more)
tests/unit/: daily-focus-summary.spec.ts  edge-cases.spec.ts  pomodoro-cycle.spec.ts  ticker-countdown.spec.ts  timer-controls.spec.ts
(+9 files in other folders)
